# Bug-Bounty-Orchestrator

./: .env.example  .gitignore  Przewodnik dla GitHub Copilot Budowa Osobistego Systemu Bug Bounty.txt  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  metadata.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  scans.py  targets.py
backend/app/core/: engine.py  integrations.py  scanner.py
backend/app/db/: base.py  database.py  models.py
backend/app/schemas/: scan.py  schemas.py
backend/tests/: test_api.py
frontend/: App.tsx  README.md  index.html  nginx.conf  package-lock.json  package.json  types.ts
frontend/components/: Dashboard.tsx  Header.tsx  ScanDetail.tsx  ScanStatusBadge.tsx  SeverityBadge.tsx  Spinner.tsx
frontend/services/: api.ts
frontend/src/: App.tsx
